fixed config bugs

--- a/phylogenize_default.cfg
+++ b/phylogenize_default.cfg
@@ -1,5 +1,5 @@
 UPLOAD_FOLDER = 'instance/results/'
-UPLOAD_FILES_DEST = 'instance/results/'
+UPLOADED_FILES_DEST = 'instance/results/'
 REPORT_TEMPLATE_PATH = 'phylogenize-report.Rmd'
 SECRET_KEY = 'tankboozysurrealgrinning'
 WTF_CSRF_SECRET_KEY = 'tankboozysurrealgrinning'
