--- a/phylogenize_default.cfg
+++ b/phylogenize_default.cfg
@@ -7,6 +7,7 @@ WTF_CSRF_SECRET_KEY = 'tankboozysurrealgrinning'
 MAX_CONTENT_LENGTH = 35 * 1024 * 1024
 RECAPTCHA_PUBLIC_KEY = '6LdqGmkUAAAAAIKT3ZLbEWPZaPkiLonF8W8zmLlK'
 RECAPTCHA_PRIVATE_KEY = '6LdqGmkUAAAAAHxf242OHD4_2_K0Y_TfJ3wqdohC'
+RECAPTCHA_DISABLE = True
 ALLOWED_EXTENSIONS = set([
   'txt',
   'tsv',
