--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -91,6 +91,7 @@ export(read.abd.metadata.tabular)
 export(regularize.pET)
 export(remove.allzero.abundances)
 export(render.report)
+export(render.report.alt)
 export(result.wrapper.plm)
 export(results.report)
 export(retain.observed.taxa)
@@ -109,3 +110,4 @@ export(write.test.tabular)
 export(zipData)
 export(zipLapply)
 export(zipSapply)
+import(Matrix)
