replaced a ton of horrifying enrichment code with much less horrifying code

--- a/package/phylogenize/DESCRIPTION
+++ b/package/phylogenize/DESCRIPTION
@@ -13,12 +13,12 @@ LazyData: true
 Depends:
     phylolm,
     settings,
-    Matrix
+    Matrix,
+    tidyverse
 Imports:
     data.table,
     parallel,
     qvalue,
-    tidyverse,
     ggtree,
     ape,
     phytools,
