removed stray export tag

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -26,6 +26,7 @@ export(calc.enr.overlaps)
 export(calc.ess)
 export(capwords)
 export(check.process.metadata)
+export(clean.pheno)
 export(colnorm)
 export(count.each)
 export(dirxn.enrich)
@@ -52,6 +53,7 @@ export(import.pz.db)
 export(kable.recolor)
 export(lapply.across.names)
 export(list.depth)
+export(list.even)
 export(lm.fx.pv)
 export(logistic)
 export(logit)
