added script to download and install external data

--- a/package/phylogenize/DESCRIPTION
+++ b/package/phylogenize/DESCRIPTION
@@ -39,6 +39,8 @@ Imports:
     svglite,
     pryr,
     testthat,
-    ezknitr
+    ezknitr,
+    furrr,
+    functional
 Suggests: 
 RoxygenNote: 6.1.1.9000
