added missing package future to deps

--- a/package/phylogenize/DESCRIPTION
+++ b/package/phylogenize/DESCRIPTION
@@ -20,7 +20,8 @@ Depends:
     methods,
     stats,
     graphics,
-    grDevices
+    grDevices,
+    future
 Imports:
     data.table,
     parallel,
