re-roxygened after exporting install.data function

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -39,6 +39,7 @@ export(grepv)
 export(hack.tree.labels)
 export(harmonize.abd.meta)
 export(import.pz.db)
+export(install.data.figshare)
 export(kable.recolor)
 export(lapply.across.names)
 export(list.depth)
