aaaargh etc. pt 2

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -102,7 +102,7 @@ export(single.cluster.plot)
 export(small.merge)
 export(sum.nonunique.burst)
 export(tax.annot)
-export(tbl.results.qvs)
+export(tbl.result.qvs)
 export(threshold.pos.sigs)
 export(truncated)
 export(write.test.biom)
