added function to set data to internal so it can be called

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -95,6 +95,7 @@ export(run.burst)
 export(sanity.check.abundance)
 export(sanity.check.metadata)
 export(score.regularization)
+export(set_data_internal)
 export(simple.prevalence)
 export(simulate.binom.mtx)
 export(simulate.counts)
