--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -32,12 +32,14 @@ export(get.pheno.plotting.scales)
 export(get.pheno.plotting.scales.prevalence)
 export(get.pheno.plotting.scales.specificity)
 export(get.top.N)
+export(gg.cont.tree)
 export(grepv)
 export(hack.tree.labels)
 export(harmonize.abd.meta)
 export(import.pz.db)
 export(install.data.figshare)
 export(kable.recolor)
+export(keep.tips)
 export(lapply.across.names)
 export(list.depth)
 export(list.even)
