--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -13,7 +13,6 @@ export(b.scorer)
 export(build.fx.matrix)
 export(calc.alpha.power)
 export(calc.ess)
-export(capwords)
 export(check.process.metadata)
 export(clean.pheno)
 export(colnorm)
@@ -67,6 +66,7 @@ export(optimize.b.wrapper)
 export(output.enr.table)
 export(pblapply.across.names)
 export(pbmcapply)
+export(pheno_nonzero_var)
 export(phylolm.fx.pv)
 export(phylolm.subset)
 export(pick.env.dset.fx)
