removed burst.results func

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -11,7 +11,7 @@ export(clean.pheno)
 export(do.clust.plot)
 export(do.fisher)
 export(gene.annot)
-export(get.burst.results)
+export(get.vsearch.results)
 export(get.pheno.plotting.scales)
 export(get.top.N)
 export(gg.cont.tree)
