changed prepare.burst.input to vsearch

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -39,7 +39,7 @@ export(phylolm.fx.pv)
 export(plot.labeled.phenotype.trees)
 export(plot.pheno.distributions)
 export(plot.phenotype.trees)
-export(prepare.burst.input)
+export(prepare.vsearch.input)
 export(prev.addw)
 export(process.16s)
 export(pv1)
