--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -58,7 +58,7 @@ export(sanity.check.abundance)
 export(sanity.check.metadata)
 export(set_data_internal)
 export(single.cluster.plot)
-export(sum.nonunique.burst)
+export(sum.nonunique.vsearch)
 export(tax.annot)
 export(tbl.result.qvs)
 export(threshold.pos.sigs)
