swapped run.burst to run.vsearch

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -53,7 +53,7 @@ export(render.report)
 export(result.wrapper.plm)
 export(results.report)
 export(retain.observed.taxa)
-export(run.burst)
+export(run.vsearch)
 export(sanity.check.abundance)
 export(sanity.check.metadata)
 export(set_data_internal)
