Finished loading in files

--- a/package/phylogenize/DESCRIPTION
+++ b/package/phylogenize/DESCRIPTION
@@ -22,10 +22,9 @@ Depends:
     graphics,
     grDevices,
     functional,
-    future,
+    future,cd
     furrr,
-    yaml,
-    sparklyr
+    yaml
 Imports:
     data.table,
     parallel,
