misc bug fixes, including fact that abund_mtx was not being subsetted

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -4,16 +4,25 @@ export(add.below.LOD)
 export(add.sig.descs)
 export(adjust.db)
 export(alt.multi.enrich)
+export(ashr.diff.abund)
 export(calc.alpha.power)
 export(calc.ess)
+export(calculate_phenotypes)
+export(change.presence.tax.level)
+export(change.tree.tax.level)
 export(check.process.metadata)
+export(check_data_found)
 export(clean.pheno)
+export(correl.clr)
+export(data_to_phenotypes)
 export(do.clust.plot)
 export(do.fisher)
 export(gene.annot)
-export(get.vsearch.results)
 export(get.pheno.plotting.scales)
 export(get.top.N)
+export(get.vsearch.results)
+export(get_enrichment_tbls)
+export(get_signif_associated_genes)
 export(gg.cont.tree)
 export(hack.tree.labels)
 export(harmonize.abd.meta)
@@ -21,6 +30,7 @@ export(import.pz.db)
 export(install.data.figshare)
 export(kable.recolor)
 export(keep.tips)
+export(kegg.enrich.single)
 export(lm.fx.pv)
 export(logistic)
 export(logit)
@@ -28,13 +38,16 @@ export(make.pos.sig)
 export(make.results.matrix)
 export(make.signs)
 export(make.sigs)
+export(matrix.POMS)
 export(matrix.plm)
 export(multi.enrich)
+export(multi.kegg.enrich)
 export(non.interactive.plot)
 export(nonequiv.pos.sig)
 export(nonparallel.results.generator)
 export(output.enr.table)
 export(pheno_nonzero_var)
+export(phylogenize_core)
 export(phylolm.fx.pv)
 export(plot.labeled.phenotype.trees)
 export(plot.pheno.distributions)
