--- a/package/phylogenize/DESCRIPTION
+++ b/package/phylogenize/DESCRIPTION
@@ -50,7 +50,8 @@ Imports:
     testthat,
     ezknitr,
     plotly,
-    patchwork
+    patchwork,
+    forcats
 Suggests: 
     ANCOMBC,
     Maaslin2,
