--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -7,6 +7,7 @@ export(add.sig.descs)
 export(adjust.db)
 export(alt.multi.enrich)
 export(ashr.diff.abund)
+export(augment_with_enrichments)
 export(calc.alpha.power)
 export(calc.ess)
 export(calc.phenotype.interest)
@@ -65,6 +66,7 @@ export(pz.warning)
 export(read.abd.metadata)
 export(remove.allzero.abundances)
 export(render.report)
+export(render_core_report)
 export(result.wrapper.plm)
 export(results.report)
 export(retain.observed.taxa)
