--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -51,6 +51,7 @@ export(nonequiv.pos.sig)
 export(nonparallel.results.generator)
 export(output.enr.table)
 export(pheno_nonzero_var)
+export(phylogenize)
 export(phylogenize_core)
 export(phylolm.fx.pv)
 export(plot.pheno.distributions)
@@ -65,7 +66,6 @@ export(pz.options)
 export(pz.warning)
 export(read.abd.metadata)
 export(remove.allzero.abundances)
-export(render.report)
 export(render_core_report)
 export(result.wrapper.plm)
 export(results.report)
