fixed some bugs having to do with significance thresholds

--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -24,6 +24,7 @@ export(gene.annot)
 export(get.pheno.plotting.scales)
 export(get.top.N)
 export(get.vsearch.results)
+export(get_all_associated_genes)
 export(get_enrichment_tbls)
 export(get_signif_associated_genes)
 export(gg.cont.tree)
