removed phytools dependency and a couple of others

--- a/package/phylogenize/DESCRIPTION
+++ b/package/phylogenize/DESCRIPTION
@@ -11,7 +11,40 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 Depends:
+   readr,
+    dplyr,
+    stringr,
+    tidyr,
+    tibble,
+    purrr,
+    parallel
+Imports:
     readr,
+    dplyr,
+    stringr,
+    tidyr,
+    tibble,
+    purrr,
+    parallel,
+    qvalue,
+    ape,
+    clinUtils,
+    knitr,
+    kableExtra,
+    scales,
+    ggiraph,
+    ggplot2,
+    MASS,
+    seqinr,
+    pbapply,
+    gtools,
+    svglite,
+    testthat,
+    ezknitr,
+    plotly,
+    patchwork,
+    forcats,
+    castor,
     phylolm,
     settings,
     Matrix,
@@ -29,33 +62,6 @@ Depends:
     tidymodels,
     ashr,
     plotly
-Imports:
-    readr,
-    dplyr,
-    stringr,
-    tibble,
-    purrr,
-    parallel,
-    qvalue,
-    ape,
-    clinUtils,
-    phytools,
-    knitr,
-    kableExtra,
-    scales,
-    ggiraph,
-    xml2,
-    ggplot2,
-    MASS,
-    seqinr,
-    pbapply,
-    gtools,
-    svglite,
-    testthat,
-    ezknitr,
-    plotly,
-    patchwork,
-    forcats
 Suggests: 
     ANCOMBC,
     Maaslin2,
