removing some unused or underused packages

--- a/package/phylogenize/DESCRIPTION
+++ b/package/phylogenize/DESCRIPTION
@@ -16,53 +16,49 @@ Depends:
     stringr,
     tidyr,
     tibble,
-    purrr
-Imports:
-    readr,
-    dplyr,
-    stringr,
-    tidyr,
-    tibble,
     purrr,
-    parallel,
-    qvalue,
+    Matrix
+Imports:
     ape,
-    clinUtils,
-    knitr,
-    kableExtra,
-    scales,
-    ggiraph,
-    ggplot2,
-    MASS,
-    seqinr,
-    pbapply,
-    gtools,
-    svglite,
-    testthat,
-    ezknitr,
-    plotly,
-    patchwork,
-    forcats,
-    castor,
-    phylolm,
-    settings,
-    Matrix,
-    ggtree,
+    ashr,
     biomformat,
-    methods,
-    stats,
+    castor,
+    clinUtils,
+    dplyr,
+    ezknitr,
+    forcats,
+    future,
+    ggplot2,
+    ggtree,
     graphics,
     grDevices,
-    functional,
-    future,
-    cd,
-    yaml,
-    furrr,
-    tidymodels,
-    ashr,
-    plotly
+    gtools,
+    kableExtra,
+    knitr,
+    MASS,
+    Matrix,
+    methods,
+    parallel,
+    patchwork,
+    pbapply,
+    phylolm,
+    plotly,
+    purrr,
+    qvalue,
+    readr,
+    scales,
+    seqinr,
+    settings,
+    stats,
+    stringr,
+    svglite,
+    testthat,
+    tibble,
+    tidyr, 
+    yaml
 Suggests: 
     ANCOMBC,
     Maaslin2,
-    POMS
+    POMS,
+    clusterProfiler
 RoxygenNote: 7.3.2
