--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -80,3 +80,5 @@ export(tax.annot)
 export(tbl.result.qvs)
 export(threshold.pos.sigs)
 import(Matrix)
+importFrom(ggtree,"%<+%")
+importFrom(settings,clone_and_merge)
