couple bug fixes for clinutils ports

--- a/package/phylogenize/DESCRIPTION
+++ b/package/phylogenize/DESCRIPTION
@@ -27,8 +27,10 @@ Imports:
     ashr,
     biomformat,
     castor,
+    crosstalk,
     clinUtils,
     dplyr,
+    DT,
     extraDistr,
     forcats,
     future,
@@ -36,6 +38,7 @@ Imports:
     ggtree,
     graphics,
     grDevices,
+    htmlwidgets,
     kableExtra,
     knitr,
     MASS,
