--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -24,6 +24,7 @@ export(gene.annot)
 export(get.pheno.plotting.scales)
 export(get.top.N)
 export(get.vsearch.results)
+export(getClinDT)
 export(get_all_associated_genes)
 export(get_enrichment_tbls)
 export(get_signif_associated_genes)
@@ -35,6 +36,8 @@ export(interactive.plot)
 export(kable.recolor)
 export(keep.tips)
 export(kegg.enrich.single)
+export(knitPrintListObjects)
+export(knitPrintListPlots)
 export(lm.fx.pv)
 export(logistic)
 export(logit)
