--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -20,6 +20,7 @@ export(correl.clr)
 export(data_to_phenotypes)
 export(do.clust.plot)
 export(do.fisher)
+export(enrich_downloaded_KEGG)
 export(gene.annot)
 export(get.pheno.plotting.scales)
 export(get.top.N)
