--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -42,6 +42,7 @@ export(knitPrintListPlots)
 export(lm.fx.pv)
 export(logistic)
 export(logit)
+export(logit_auc_pheno)
 export(make.pos.sig)
 export(make.results.matrix)
 export(make.signs)
