--- a/package/phylogenize/NAMESPACE
+++ b/package/phylogenize/NAMESPACE
@@ -32,7 +32,7 @@ export(get_signif_associated_genes)
 export(gg.cont.tree)
 export(harmonize.abd.meta)
 export(import.pz.db)
-export(install.data.figshare)
+export(install_data)
 export(interactive.plot)
 export(kable.recolor)
 export(keep.tips)
